table truncated and fixed

--- a/assets/css/app.sass
+++ b/assets/css/app.sass
@@ -259,6 +259,7 @@ b, h5
   font-size: 1rem
 
 .table
+  table-layout: fixed
   thead
     font-style: italic
   tbody
